// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GoalsScreen Testing Snapshot test for EditGoalScreen 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "marginBottom": 50,
      }
    }
  >
    <ToggleSwitch
      isOn={undefined}
      label="Track number of steps"
      labelStyle={
        Object {
          "color": "black",
          "fontWeight": "900",
        }
      }
      offColor="red"
      onColor="green"
      onToggle={[Function]}
      size="large"
    />
    ;
  </View>
  <View
    style={
      Object {
        "marginBottom": 50,
      }
    }
  >
    <ToggleSwitch
      isOn={undefined}
      label="Track hours of studying"
      labelStyle={
        Object {
          "color": "black",
          "fontWeight": "900",
        }
      }
      offColor="red"
      onColor="green"
      onToggle={[Function]}
      size="large"
    />
    ;
  </View>
  <View>
    <ToggleSwitch
      isOn={undefined}
      label="Track number of pushups"
      labelStyle={
        Object {
          "color": "black",
          "fontWeight": "900",
        }
      }
      offColor="red"
      onColor="green"
      onToggle={[Function]}
      size="large"
    />
    ;
  </View>
</View>
`;

exports[`GoalsScreen Testing Snapshot test for EditStepGoal 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#e8fcb8",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "width": 300,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "padding": 10,
        }
      }
    >
      Set a new goal for daily number of steps
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 32,
        }
      }
    />
  </View>
</View>
`;

exports[`GoalsScreen Testing Snapshot test for EditStudyGoal 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#e8fcb8",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "stretch",
        "width": "80%",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      Set a new goal for daily hours of studying 
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 32,
        }
      }
    />
  </View>
</View>
`;

exports[`GoalsScreen Testing renders the GoalScreen 1`] = `null`;

exports[`GoalsScreen Testing renders the PushupsGoal component 1`] = `null`;

exports[`GoalsScreen Testing renders the StepGoal component 1`] = `null`;

exports[`GoalsScreen Testing renders the StudyGoal component 1`] = `null`;
